# Smart_Kamera_Web

./: .gitignore  README.md  draw_dir_structure.py  requirements.txt  sanity_check.py  setup_env.ps1
backend/: app.py  app_local.py  models.py  requirements.txt  requirements_backup.txt  requirements_backup2.txt  run_local.py  storage_local.py
backend/static/: index.html  script.js  styles.css
docs/: adr-0001-architecture.md  contracts.md  index.html  script.js  services.md
infra/: .env.example
libs/ocr_core/: README.md  pyproject.toml
libs/ocr_core/ocr_core/: __init__.py  bbox_utils.py  confidence.py  csv_adapter.py  json_adapter.py  models.py  ocr_runner.py
libs/ocr_core/ocr_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libs/ocr_core/ocr_core/vendors/: class_easyOCR_V1.py
libs/ocr_core/tests/: __init__.py  test_bbox_utils.py  test_confidence.py  test_csv_adapter.py  test_ocr_runner.py
worker/: requirements.txt  worker.py
