[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr_core"
version = "0.1.0"
description = "Reusable OCR models & utils for Smart_Kamera_Web"
authors = [{ name = "Smart_Kamera", email = "agammuhajir1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5,<3.0",
  "pandas>=2.0,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ocr_core*"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ocr = ["easyocr>=1.7", "opencv-python-headless>=4.8", "numpy>=1.24", "pandas>=2.0"]

